// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardList CardListの初期値(linkあり): cards 1`] = `
"<div>
  <div class=\\"card-list\\">
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー1の画像\\" class=\\"base-img--extend base-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー1</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure> <a href=\\"https://takatechblog.netlify.app/\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
          WebSite
        </a>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー2の画像\\" class=\\"base-img--extend base-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー2</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure> <a href=\\"https://github.com/taka1156/audio-player\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
          GitHub
        </a>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー3の画像\\" class=\\"base-img--extend base-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー3</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure> <a href=\\"https://takatechblog.netlify.app/\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
          WebSite
        </a>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー4の画像\\" class=\\"base-img--extend base-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー4</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure> <a href=\\"https://github.com/taka1156/audio-player\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
          GitHub
        </a>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー5の画像\\" class=\\"base-img--extend base-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー5</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure> <a href=\\"https://takatechblog.netlify.app/\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
          WebSite
        </a>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー6の画像\\" class=\\"base-img--extend base-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー6</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure> <a href=\\"https://github.com/taka1156/audio-player\\" tag=\\"a\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" class=\\"base-link--extend\\">
          GitHub
        </a>
      </article>
    </div>
  </div>
</div>"
`;

exports[`CardList CardListの初期値(linkなし): cards 1`] = `
"<div>
  <div class=\\"card-list\\">
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー1の画像\\" class=\\"base-img--extend base-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー1</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー2の画像\\" class=\\"base-img--extend base-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー2</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー3の画像\\" class=\\"base-img--extend base-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー3</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー4の画像\\" class=\\"base-img--extend base-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー4</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー5の画像\\" class=\\"base-img--extend base-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー5</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミー6の画像\\" class=\\"base-img--extend base-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption class=\\"card-list-item__caption\\">
            <h2 class=\\"card-list-item__title\\">ダミー6</h2>
            <p class=\\"base-text--extend\\">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れてい</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
  </div>
</div>"
`;
